--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.username = postgres
 spring.datasource.password = postgres
 
 spring.jpa.hibernate.ddl-auto = update
+
+# SMTP config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kovacevic.puskarevic.stefan@gmail.com
+spring.mail.password=nssy awwf pyep hdga
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
