--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.hibernate.ddl-auto = update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=kovacevic.puskarevic.stefan@gmail.com
-spring.mail.password=nssy awwf pyep hdga
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
