req/res update 17.06.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.mail.username=kovacevic.puskarevic.stefan@gmail.com
 spring.mail.password=nssy awwf pyep hdga
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#logging.level.org.springframework.security=DEBUG
+#logging.level.com.golfResults.tournament=DEBUG
+#logging.level.org.springframework.web=DEBUG
