--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -3,21 +3,23 @@ name: Backend CI
 on:
   push:
     branches:
-      - main
+      - develop
   pull_request:
     branches:
-      - main
+      - develop
 
 jobs:
-  backend-test:
+  backend-ci:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build backend (runs tests)
-        run: docker build .
+      - name: Build backend Docker image (runs tests)
+        run: |
+          echo "Building backend Docker image..."
+          docker build -t golf-results-backend:ci .
