--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url = jdbc:h2://mem:db:DB_CLOSE_DELAY=-1
+spring.datasource.url = jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 
 spring.datasource.username = sa
 spring.datasource.password = sa
 
 spring.datasource.drive-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.show-sql = false
